--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -13,6 +13,7 @@
     width: 100%;
     height: 61px;
     background-color: white;
+    box-shadow: 0 0 2px black;
     .navbar-default{
       position: static;
       background-color: transparent;
@@ -56,6 +57,7 @@ a{
           padding-left: 0;
           padding-right: 28%;
           text-align: right;
+
           li{
             display: inline-block;
             text-transform: none;
