--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,8 +1,10 @@
 strong{
   font-family: MyriadPro-Semibold;
 }
+
+
 #slider-section{
-  margin-top: 62px;
+  margin-top: 60px;
   width: 100%;
   //height: 600px;
   background-color: black;
@@ -453,7 +455,7 @@ background-color: #dbdada;
   }
 }
 footer{
-  margin-top: 42px;
+  //margin-top: 42px;
   padding-top: 42px;
   padding-bottom: 57px;
   background-color: #6695ce;
@@ -480,6 +482,7 @@ footer{
         margin-top: 32px;
         margin-left: 0;
         li{
+          display: block;
           font-family: MyriadPro;
           font-size: 17px;
           line-height: 1;
